--- a/src/data.ipynb
+++ b/src/data.ipynb
@@ -92,6 +92,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'[{\"week\": null, \"title\": \"10th week\", \"topics\": null, \"description\": null, \"learningUnitAssignments\": [{\"id\": 5694, \"type\": \"TUTORIAL\", \"optional\": false}, {\"id\": 15628, \"type\": \"PROJECT\", \"optional\": false, \"assignmentType\": \"SOLO\"}, {\"id\": 15306, \"type\": \"PROJECT\", \"optional\": false, \"assignmentType\": \"SOLO\"}]}, {\"week\": null, \"title\": \"11th week\", \"topics\": null, \"description\": null, \"learningUnitAssignments\": [{\"id\": 5026, \"type\": \"TUTORIAL\", \"optional\": false}, {\"id\": 5721, \"type\": \"TUTORIAL\", \"optional\": false}, {\"id\": 5012, \"type\": \"TUTORIAL\", \"optional\": false}, {\"id\": 15294, \"type\": \"TUTORIAL\", \"optional\": false}, {\"id\": 15460, \"type\": \"PROJECT\", \"optional\": false, \"assignmentType\": \"SOLO\"}, {\"id\": 15282, \"type\": \"PROJECT\", \"optional\": false, \"assignmentType\": \"SOLO\"}]}, {\"week\": null, \"title\": \"12th week\", \"topics\": null, \"description\": null, \"learningUnitAssignments\": [{\"id\": 15254, \"type\": \"PROJECT\", \"optional\": false, \"assignmentType\": \"SOLO\"}]}]'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "learning_moduls.learning_units[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['id', 'title', 'story', 'learn', 'tasks', 'hints', 'background'], dtype='object')"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "projects.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
@@ -142,24 +182,6 @@
     "        r[\"learningUnitAssignments\"] = updated_assignments\n",
     "    return jrow \n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# minden sor feldolgozása\n",
-    "all= []\n",
-    "id_list = [40652, 39052, 35202, 35852, 31652, 31653, 23452, 39802, 29404, 38552, 31102, 32858]\n",
-    "#selected = learning_moduls[:2]\n",
-    "selected = learning_moduls[learning_moduls['id'].isin(id_list)]\n",
-    "for i, t, k in zip (selected[\"id\"], selected[\"title\"],selected[\"learning_units\"]):\n",
-    "    lus = update_learning_units(k)\n",
-    "    for lu in lus:\n",
-    "        all.append([i,t,lu ])\n",
-    "all = pd.DataFrame(all)"
    ]
   },
   {
@@ -452,6 +474,8 @@
     "    Require synthesis of information into coherent arguments or theories.\n",
     "    Encourage reflection on how learned concepts support or challenge existing knowledge.\n",
     "    Suggest areas for further study based on identified gaps or limitations.\n",
+    "\n",
+    "    Important: You should never add additional text to your response, just only the measurable learning outcomes!\n",
     "    \"\"\"\n",
     "\n",
     "    # Ha a learning_units string típusú, akkor azt közvetlenül használjuk\n",
